fr/15.3/config/index.rst
Guide de configuration |Fess|
=============================

Ce guide complet couvre la configuration de |Fess|. Chaque section est organisée par thématique.

.. toctree::
   :maxdepth: 2
   :caption: Introduction

   intro

.. toctree::
   :maxdepth: 2
   :caption: Configuration de base

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: Configuration du crawler

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: Configuration des fonctions de recherche

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration

.. toctree::
   :maxdepth: 2
   :caption: Configuration de sécurité

   security-role
   security-virtual-host

.. toctree::
   :maxdepth: 2
   :caption: Administration système

   admin-logging
   admin-index-backup
   admin-analyzer
   admin-opensearch-dashboards
